# webapiserver

./: .gitignore  Cargo.toml  LICENCE  create_pem.sh  server.toml
config/: log4rs.toml  server.toml
src/: main.rs
src/app_config/: mod.rs
src/auth/: auth.rs  mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/middleware/: login_checker.rs  mod.rs  sec_header.rs
