[package]
name = "webservice"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition="2018"

[dependencies]
actix-web = { version = "0.7", features = ["alpn"] }
actix = "0.7"
actix-redis = "0.5"
openssl = { version = "0.10", features = ["v110"] }
rand = "0.6"
futures = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
tokio-threadpool = "0.1"
base64 = "0.10"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.13.0"
failure = "0.1.5"
config = "0.9.2"
rust-crypto = "0.2.36"